Adds lazy loading of math constants from computed files
